--- a/sass/Pages/_menu.scss
+++ b/sass/Pages/_menu.scss
@@ -165,14 +165,17 @@ picture {
                 }
                 
                 &-text {
-                    width: calc(80%);
-                    // white-space: nowrap;
-                    // overflow: hidden;
-                    // text-overflow: ellipsis;
+                    width: 80%;
+                    overflow: hidden;
+                    h4, p{
+                        white-space: nowrap;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                    }
                 }
             
                 &-price {
-                    width: calc(10%);
+                    width: 10%;
                     margin-left: 20px;
                     display: flex;
                     flex-direction: column;
